gerbera: Attach to DCP register 89.
On read, the Gerbera status is returned as a single byte.

On write, a subcommand byte tells us what the SPI slave wants Gerbera
to do. Currently, there is only a single subcommand for resetting the
database.

Change-Id: Iec6455841770bb81caafc8a68e0ff0a0d49923b1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,7 @@ dcpd_SOURCES = \
     dcpregs_drcp.h dcpregs_networkconfig.hh dcpregs_wlansurvey.hh \
     dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.hh dcpregs_playstream.hh dcpregs_status.hh \
-    dcpregs_upnpname.hh dcpregs_audiosources.hh dcpregs_volume.hh \
+    dcpregs_upnpname.hh dcpregs_upnpserver.hh dcpregs_audiosources.hh dcpregs_volume.hh \
     dcpregs_searchparameters.hh dcpregs_appliance.hh dcpregs_internationalization.hh \
     dcpregs_accesspoint.hh \
     connman_iter.c connman_iter.h connman_scan.cc connman_scan.hh \
@@ -116,6 +116,7 @@ libregisters_la_SOURCES = \
     dcpregs_internationalization.cc dcpregs_internationalization.hh \
     dcpregs_networkconfig.cc dcpregs_networkconfig.hh \
     dcpregs_upnpname.cc dcpregs_upnpname.hh \
+    dcpregs_upnpserver.cc dcpregs_upnpserver.hh \
     dcpregs_wlansurvey.cc dcpregs_wlansurvey.hh \
     dcpregs_accesspoint.cc dcpregs_accesspoint.hh \
     dcpregs_filetransfer.cc dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
