D-Bus: Renamings, rearrangements, stronger typing.
Getting rid of C in the D-Bus interface code was an important first
step to enable some larger future changes. There are *so* many places
that should be improved. Still lots of code around which looks like
C++ but is structured like C.

Change-Id: I41baa238f494c7cd7fe94abe190e107779beb930

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,7 +49,7 @@ dcpd_SOURCES = \
     dbus_common.c dbus_common.h \
     dbus_iface.cc dbus_iface.hh dbus_iface_deep.h \
     dbus_handlers.h dbus_handlers_connman_agent.h connman_agent.h \
-    dbus_handlers_connman_manager.h dbus_handlers_connman_manager_glue.h \
+    dbus_handlers_connman_manager.hh \
     configuration.cc configuration.hh configuration_base.hh configuration_changed.hh \
     configuration_settings.hh inifile.h \
     configuration_dcpd.cc configuration_dcpd.hh configuration_dcpd.h \
@@ -120,7 +120,7 @@ libregisters_la_SOURCES = \
     dcpregs_searchparameters.cc dcpregs_searchparameters.hh \
     dcpregs_status.hh \
     volume_control.cc volume_control.hh dcpregs_volume.hh \
-    dbus_handlers_connman_manager_glue.h networkprefs.h \
+    dbus_handlers_connman_manager.hh networkprefs.h \
     connman_service.hh connman_service_list.hh connman_address.hh maybe.hh\
     network_device.hh network_device_list.hh \
     network_config_request.hh \
@@ -176,8 +176,7 @@ libapplink_la_CXXFLAGS = $(AM_CXXFLAGS)
 libdbus_handlers_la_SOURCES = \
     dbus_handlers.cc dbus_handlers.h \
     dbus_handlers_connman_agent.c dbus_handlers_connman_agent.h connman_agent.h \
-    dbus_handlers_connman_manager.cc dbus_handlers_connman_manager.h \
-    dbus_handlers_connman_manager_glue.h \
+    dbus_handlers_connman_manager.cc dbus_handlers_connman_manager.hh \
     network_config_to_json.cc network_config_to_json.hh \
     networkprefs.h \
     connman_dbus.h \
