Player: Add new plain URL player component.
Change-Id: I3b2bf33166cbb079ff1f7183a0d628800dc574dc

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,8 +44,7 @@ dcpd_SOURCES = \
     connman_address.hh \
     connman_technology_registry.hh connman_property_cache.hh \
     network_device.hh network_device_list.hh \
-    stream_id.h \
-    coverart.hh gvariantwrapper.hh md5.hh \
+    stream_id.h plainplayer.hh coverart.hh gvariantwrapper.hh md5.hh \
     dbus_common.c dbus_common.h \
     dbus_iface.cc dbus_iface.hh dbus_iface_deep.h \
     dbus_handlers.h dbus_handlers_connman_agent.hh connman_agent.h \
@@ -94,6 +93,7 @@ noinst_LTLIBRARIES = \
     libconnman_technology_registry.la \
     libconnman_dbus.la \
     libaccesspoint.la \
+    libplainplayer.la \
     liblogind_dbus.la \
     libsystemd_dbus.la \
     libdebug_dbus.la
@@ -197,6 +197,9 @@ libaccesspoint_la_SOURCES = \
     accesspoint.cc accesspoint.hh \
     accesspoint_manager.cc accesspoint_manager.hh
 libaccesspoint_la_CXXFLAGS = $(AM_CXXFLAGS)
+
+libplainplayer_la_SOURCES = plainplayer.cc plainplayer.hh
+libplainplayer_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 nodist_libdcpd_dbus_la_SOURCES = dcpd_dbus.c dcpd_dbus.h
 libdcpd_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
