Add JSON for Modern C++ version 3.6.1 to repository.
MIT license, so we can just copy it over here and use it. Nice. :)
See https://github.com/nlohmann/json

Change-Id: I95d02667d759895c5892870378039544e2fb8e9d

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -809,6 +809,7 @@ EXCLUDE                = \
     @abs_builddir@/src/logind_dbus.c \
     @abs_builddir@/src/systemd_dbus.c \
     @abs_builddir@/src/gerbera_dbus.c \
+    @abs_srcdir@/src/json.hh \
     @abs_srcdir@/dbus_interfaces/de_tahifi_lists_errors.hh \
     @abs_srcdir@/dbus_interfaces/*.xml
 
