Audio paths: Implement parser for AuPaL.
Audio Path Language... Our parser simply turns the specification into
an equivalent JSON object which is later going to be posted to the
audio path daemon.

We could also move the AuPaL parser to the audio path daemon and
process the input there. However, we turn these inputs into JSON
objects within DCPD already to get rid of DCP-specifics as soon as
possible. This allows us to deal with only a single audio path
specification format at system level, and avoids the question whether
or not AuPaL should also be understood by the REST API (*shudder*).

Change-Id: I6b9b35dba2658d7ca18be47a2cff5acc3003425d

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,7 +37,7 @@ dcpd_SOURCES = \
     dcpregs_tcptunnel.hh dcpregs_playstream.hh dcpregs_stream_speed.hh dcpregs_status.hh \
     dcpregs_upnpname.hh dcpregs_upnpserver.hh dcpregs_audiosources.hh dcpregs_volume.hh \
     dcpregs_searchparameters.hh dcpregs_appliance.hh dcpregs_internationalization.hh \
-    dcpregs_accesspoint.hh dcpregs_datetime.hh \
+    dcpregs_accesspoint.hh dcpregs_datetime.hh audiopath_minidsl.hh json.hh \
     connman_iter.c connman_iter.h connman_scan.cc connman_scan.hh \
     connman_common.c connman_common.h \
     connman_service.hh connman_service_list.hh maybe.hh \
@@ -71,6 +71,7 @@ noinst_LTLIBRARIES = \
     libnetworkprefs.la \
     libinifile.la \
     libapplink.la \
+    libaudiopath_minidsl.la \
     libdrcpdcomm.la \
     libxmodem.la \
     libnetwork.la \
@@ -174,6 +175,11 @@ libapplink_la_SOURCES = \
     smartphone_app.cc smartphone_app.hh
 libapplink_la_CFLAGS = $(AM_CFLAGS)
 libapplink_la_CXXFLAGS = $(AM_CXXFLAGS)
+
+libaudiopath_minidsl_la_SOURCES = \
+    audiopath_minidsl.cc audiopath_minidsl.hh json.hh
+libaudiopath_minidsl_la_CFLAGS = $(AM_CFLAGS)
+libaudiopath_minidsl_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 libdbus_handlers_la_SOURCES = \
     dbus_handlers.cc dbus_handlers.h \
