Audio paths: Parse path changes written to register 82.
These changes are forwarded to any recipient via D-Bus listening to
our JSON emitter D-Bus signals.

Change-Id: Ifd761ae7cd33f788593317b0170a95ae3ecfcd07

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -798,6 +798,7 @@ EXCLUDE                = \
     @abs_builddir@/src/configuration_dbus.c \
     @abs_builddir@/src/dbusdl_dbus.c \
     @abs_builddir@/src/debug_dbus.c \
+    @abs_builddir@/src/jsonio_dbus.c \
     @abs_builddir@/src/streamplayer_dbus.c \
     @abs_builddir@/src/airable_dbus.c \
     @abs_builddir@/src/artcache_dbus.c \
