fixpoint: Use implementation from common code repository.
In fact, the implementation has been moved from dcpd/aupad to common.

Change-Id: I3b38244187cd4fd05dcfdb3fb4cf22a98995a0d6

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -129,7 +129,7 @@ libregisters_la_SOURCES = \
     dcpregs_searchparameters.cc dcpregs_searchparameters.hh \
     dcpregs_datetime.cc dcpregs_datetime.hh \
     dcpregs_status.hh \
-    volume_control.cc volume_control.hh dcpregs_volume.hh \
+    volume_control.cc volume_control.hh dcpregs_volume.hh fixpoint.hh \
     dbus_handlers_connman_manager.hh networkprefs.h \
     connman_service.hh connman_service_list.hh connman_address.hh maybe.hh\
     network_device.hh network_device_list.hh \
