--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2015--2019  T+A elektroakustik GmbH & Co. KG
+# Copyright (C) 2015--2020  T+A elektroakustik GmbH & Co. KG
 #
 # This file is part of DCPD.
 #
@@ -56,7 +56,8 @@ test_applink_la_SOURCES = \
     mock_dbus_iface.hh mock_dbus_iface.cc \
     mock_airable_dbus.hh mock_airable_dbus.cc \
     mock_credentials_dbus.hh mock_credentials_dbus.cc \
-    mock_messages.hh mock_messages.cc
+    mock_messages.hh mock_messages.cc \
+    mock_backtrace.hh mock_backtrace.cc
 test_applink_la_LIBADD = \
     $(top_builddir)/src/libapplink.la \
     $(top_builddir)/src/libnetwork_dispatcher.la
@@ -79,6 +80,7 @@ test_registers_la_SOURCES = \
     mock_connman.hh mock_connman.cc \
     mock_os.hh mock_os.cc \
     mock_messages.hh mock_messages.cc \
+    mock_backtrace.hh mock_backtrace.cc \
     mock_expectation.hh
 test_registers_la_LIBADD = \
     $(top_builddir)/src/libregisters.la \
@@ -108,6 +110,7 @@ test_transactions_la_SOURCES = \
     mock_logind_manager_dbus.hh mock_logind_manager_dbus.cc \
     mock_os.hh mock_os.cc \
     mock_messages.hh mock_messages.cc \
+    mock_backtrace.hh mock_backtrace.cc \
     mock_expectation.hh
 test_transactions_la_LIBADD = \
     $(top_builddir)/src/libtransactions.la \
@@ -149,6 +152,7 @@ test_network_dispatcher_la_SOURCES = \
     ../src/network_dispatcher.hh \
     mock_os.hh mock_os.cc \
     mock_messages.hh mock_messages.cc \
+    mock_backtrace.hh mock_backtrace.cc \
     mock_expectation.hh
 test_network_dispatcher_la_LIBADD = \
     $(top_builddir)/src/libnetwork_dispatcher.la \
