meson: Add preprocessor flag to doctest tests.
Change-Id: I80eb870ef8a9699e0a079e4138ec165419abe802

--- a/tests_new/meson.build
+++ b/tests_new/meson.build
@@ -35,6 +35,7 @@ test('ConnMan Service',
         ['test_connman_service.cc', 'mock_os.cc', 'mock_messages.cc'],
         include_directories: '../src',
         link_with: [testrunner_lib, connman_service_lib],
+        cpp_args: '-DDOCTEST_CONFIG_TREAT_CHAR_STAR_AS_STRING',
         build_by_default: false),
     workdir: meson.current_build_dir(),
     args: ['--reporters=strboxml', '--out=test_connman_service.junit.xml'],
@@ -46,6 +47,7 @@ test('ConnMan Property Cache',
         'test_connman_property_cache.cc',
         include_directories: '../src',
         link_with: testrunner_lib,
+        cpp_args: '-DDOCTEST_CONFIG_TREAT_CHAR_STAR_AS_STRING',
         build_by_default: false),
     workdir: meson.current_build_dir(),
     args: ['--reporters=strboxml', '--out=test_connman_property_cache.junit.xml'],
@@ -60,6 +62,7 @@ test('Access Point',
         include_directories: '../src',
         link_with: [testrunner_lib, accesspoint_lib, servicelist_lib,
                     connman_service_lib],
+        cpp_args: '-DDOCTEST_CONFIG_TREAT_CHAR_STAR_AS_STRING',
         build_by_default: false),
     workdir: meson.current_build_dir(),
     args: ['--reporters=strboxml', '--out=test_access_point.junit.xml'],
@@ -72,6 +75,7 @@ test('Plain Stream Player',
          'mock_backtrace.cc'],
         include_directories: '../src',
         link_with: [testrunner_lib, plainplayer_lib],
+        cpp_args: '-DDOCTEST_CONFIG_TREAT_CHAR_STAR_AS_STRING',
         build_by_default: false),
     workdir: meson.current_build_dir(),
     args: ['--reporters=strboxml', '--out=test_plainplayer.junit.xml'],
@@ -83,6 +87,7 @@ test('AuPaL Parser',
         'test_aupal_parser.cc',
         include_directories: '../src',
         link_with: [testrunner_lib, audiopath_minidsl_lib],
+        cpp_args: '-DDOCTEST_CONFIG_TREAT_CHAR_STAR_AS_STRING',
         build_by_default: false),
     workdir: meson.current_build_dir(),
     args: ['--reporters=strboxml', '--out=test_aupal_parser.junit.xml'],
